--- a/src/app/pages/team/single-team-member/single-team-member.component.scss
+++ b/src/app/pages/team/single-team-member/single-team-member.component.scss
@@ -75,7 +75,7 @@ a:hover{
   color: transparent;
   background-color: transparent;
   position: absolute;
-  z-index: 996;
+  z-index: 9;
   bottom: 0;
   left: 0;
   width: 100%;
